--- a/css/main.css
+++ b/css/main.css
@@ -60,10 +60,10 @@ body.light{
     --dark-accent: #414141;
     --dark-text: #f0ffff;
     --dark-border: #999999;
-    --sgd-blue: #3B96CE; /* #1d68a4 */
+    --sgd-blue: #165588; /* #1d68a4 */
 
-    --light-background: #ddeeeb;
-    --light-foreground: #a5aeb1;
+    --light-background: #EBEBEB; /* #ddeeeb*/
+    --light-foreground: #acb1b3;
     --light-accent: #83898d;
     --light-text: #1c1c1d;
     --light-border: #414141;
